--- a/genindex.html
+++ b/genindex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; AxoDen 1.0.2 documentation</title>
+    <title>Index &#8212; AxoDen 1.1.0 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=d1102ebc" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=12dfc556" />
-    <script src="_static/documentation_options.js?v=1ed6394b"></script>
+    <script src="_static/documentation_options.js?v=fc837d61"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
@@ -38,6 +38,7 @@
  | <a href="#C"><strong>C</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#J"><strong>J</strong></a>
  | <a href="#L"><strong>L</strong></a>
@@ -150,16 +151,18 @@
   </ul></td>
 </tr></table>
 
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.hash_uploaded_file">hash_uploaded_file() (in module axoden.gui.streamlit_app.app_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.init_session_state">init_session_state() (in module axoden.gui.streamlit_app.app_utils)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="volume_projections.html#axoden.volume_projections.intensity_along_axis">intensity_along_axis() (in module axoden.volume_projections)</a>
-</li>
-      <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.invalidate_figure_cache">invalidate_figure_cache() (in module axoden.gui.streamlit_app.app_utils)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -242,7 +245,7 @@
         <li><a href="volume_projections.html#axoden.volume_projections.process_image">(in module axoden.volume_projections)</a>
 </li>
       </ul></li>
-      <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.process_image_single">process_image_single() (in module axoden.gui.streamlit_app.app_utils)</a>
+      <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.process_image_single_cached">process_image_single_cached() (in module axoden.gui.streamlit_app.app_utils)</a>
 </li>
       <li><a href="gui.html#axoden.gui.streamlit_app.app_utils.process_images">process_images() (in module axoden.gui.streamlit_app.app_utils)</a>
 </li>
